--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
         {
             "src": "/images/icons/favicon-app-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
